remove dist folder

--- a/public/index.html
+++ b/public/index.html
@@ -65,13 +65,13 @@ License: You must have a valid license purchased only from themeforest(the above
     }
 
   </style>
-<link rel="stylesheet" href="styles.3f0c782531882b354a15.css"></head>
+</head>
 
 <body class="layout-dark">
   <app-root></app-root>
   <div class="page-loading">
     <img src="assets/img/oval.svg" class="loading-icon" />
   </div>
-<script src="runtime.1a696b5ac09a6ed7183b.js" defer></script><script src="polyfills-es5.3861413d6b24d52ac498.js" nomodule defer></script><script src="polyfills.80443d676413947d15b6.js" defer></script><script src="scripts.f4b74752d049fceaaf09.js" defer></script><script src="main.f54ac993dc05ed47931a.js" defer></script></body>
+<script src="runtime.js" defer></script><script src="polyfills-es5.js" nomodule defer></script><script src="polyfills.js" defer></script><script src="styles.js" defer></script><script src="scripts.js" defer></script><script src="vendor.js" defer></script><script src="main.js" defer></script></body>
 
 </html>
